[gd_scene load_steps=76 format=3 uid="uid://cc48xkstx6lo0"]

[ext_resource type="Script" path="res://Scripts/Personatge.gd" id="1_48cjj"]
[ext_resource type="Texture2D" uid="uid://dh2bobfdg6dr6" path="res://Assets/Persoantge/Adventurer/adventurer-Sheet.png" id="1_r0a2c"]
[ext_resource type="Texture2D" uid="uid://7ipadcd20ex5" path="res://Assets/Persoantge/Adventurer/Individual_Sprites/adventurer-idle-00.png" id="2_yv18n"]
[ext_resource type="Texture2D" uid="uid://dpk47c78tma20" path="res://Assets/Persoantge/Adventurer/Individual_Sprites/adventurer-idle-01.png" id="3_fn7nx"]
[ext_resource type="Texture2D" uid="uid://dcm6pdty7s0r8" path="res://Assets/Persoantge/Adventurer/Individual_Sprites/adventurer-idle-02.png" id="4_7enuh"]
[ext_resource type="Texture2D" uid="uid://dcuyttm53fqf" path="res://Assets/Persoantge/Adventurer/Individual_Sprites/adventurer-idle-03.png" id="5_xtsmu"]
[ext_resource type="Texture2D" uid="uid://86yrx2b04mi1" path="res://Assets/Persoantge/Adventurer/Individual Sprites/adventurer-run-00.png" id="6_fgcl5"]
[ext_resource type="Texture2D" uid="uid://kvw8prl7grlu" path="res://Assets/Persoantge/Adventurer/Individual Sprites/adventurer-run-01.png" id="7_7cu2b"]
[ext_resource type="Texture2D" uid="uid://bdswc51cyxyk8" path="res://Assets/Persoantge/Adventurer/Individual Sprites/adventurer-run-02.png" id="8_e2n4h"]
[ext_resource type="Texture2D" uid="uid://de2776ybgb62g" path="res://Assets/Persoantge/Adventurer/Individual Sprites/adventurer-run-03.png" id="9_cyen2"]
[ext_resource type="Texture2D" uid="uid://ci6k4spalm4h1" path="res://Assets/Persoantge/Adventurer/Individual Sprites/adventurer-run-04.png" id="10_typlu"]
[ext_resource type="Texture2D" uid="uid://dre11kq3if3e0" path="res://Assets/Persoantge/Adventurer/Individual Sprites/adventurer-run-05.png" id="11_piukt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_f0d3h"]
atlas = ExtResource("1_r0a2c")
region = Rect2(0, 333, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7gne"]
atlas = ExtResource("1_r0a2c")
region = Rect2(50, 333, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_uk3wn"]
atlas = ExtResource("1_r0a2c")
region = Rect2(100, 333, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1w0q"]
atlas = ExtResource("1_r0a2c")
region = Rect2(150, 333, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujpc7"]
atlas = ExtResource("1_r0a2c")
region = Rect2(200, 333, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_nycyr"]
atlas = ExtResource("1_r0a2c")
region = Rect2(250, 333, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_vse0e"]
atlas = ExtResource("1_r0a2c")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_vvrtu"]
atlas = ExtResource("1_r0a2c")
region = Rect2(50, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_2glma"]
atlas = ExtResource("1_r0a2c")
region = Rect2(100, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_mb4wy"]
atlas = ExtResource("1_r0a2c")
region = Rect2(150, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbios"]
atlas = ExtResource("1_r0a2c")
region = Rect2(50, 222, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7sql"]
atlas = ExtResource("1_r0a2c")
region = Rect2(0, 222, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_e4gmr"]
atlas = ExtResource("1_r0a2c")
region = Rect2(100, 222, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_jjn0p"]
atlas = ExtResource("1_r0a2c")
region = Rect2(150, 222, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcwwy"]
atlas = ExtResource("1_r0a2c")
region = Rect2(200, 222, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvmu0"]
atlas = ExtResource("1_r0a2c")
region = Rect2(250, 222, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_0wrmx"]
atlas = ExtResource("1_r0a2c")
region = Rect2(300, 222, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_asfqd"]
atlas = ExtResource("1_r0a2c")
region = Rect2(0, 259, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_cp1c2"]
atlas = ExtResource("1_r0a2c")
region = Rect2(50, 259, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_qk6xo"]
atlas = ExtResource("1_r0a2c")
region = Rect2(100, 259, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7abj"]
atlas = ExtResource("1_r0a2c")
region = Rect2(150, 259, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_ondr5"]
atlas = ExtResource("1_r0a2c")
region = Rect2(150, 296, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_ihnw3"]
atlas = ExtResource("1_r0a2c")
region = Rect2(200, 296, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_te0rr"]
atlas = ExtResource("1_r0a2c")
region = Rect2(50, 333, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_nabsm"]
atlas = ExtResource("2_yv18n")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_db4sp"]
atlas = ExtResource("3_fn7nx")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvt22"]
atlas = ExtResource("4_7enuh")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_tl5xh"]
atlas = ExtResource("5_xtsmu")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_acwj6"]
atlas = ExtResource("1_r0a2c")
region = Rect2(150, 185, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_h5kvx"]
atlas = ExtResource("1_r0a2c")
region = Rect2(200, 185, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_xuqv8"]
atlas = ExtResource("1_r0a2c")
region = Rect2(250, 185, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_ot8hp"]
atlas = ExtResource("1_r0a2c")
region = Rect2(300, 185, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajtsa"]
atlas = ExtResource("1_r0a2c")
region = Rect2(50, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_gt5jp"]
atlas = ExtResource("1_r0a2c")
region = Rect2(100, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_cib10"]
atlas = ExtResource("1_r0a2c")
region = Rect2(150, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_po6sp"]
atlas = ExtResource("1_r0a2c")
region = Rect2(200, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmcvx"]
atlas = ExtResource("1_r0a2c")
region = Rect2(250, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6wg3"]
atlas = ExtResource("1_r0a2c")
region = Rect2(300, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1w5b"]
atlas = ExtResource("1_r0a2c")
region = Rect2(0, 111, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqkib"]
atlas = ExtResource("1_r0a2c")
region = Rect2(50, 111, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_3u05s"]
atlas = ExtResource("1_r0a2c")
region = Rect2(100, 111, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_gx6bh"]
atlas = ExtResource("1_r0a2c")
region = Rect2(150, 111, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltayq"]
atlas = ExtResource("1_r0a2c")
region = Rect2(200, 111, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_nyuyy"]
atlas = ExtResource("1_r0a2c")
region = Rect2(250, 111, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjx6c"]
atlas = ExtResource("1_r0a2c")
region = Rect2(300, 111, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vewp"]
atlas = ExtResource("1_r0a2c")
region = Rect2(0, 148, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_doy7o"]
atlas = ExtResource("1_r0a2c")
region = Rect2(50, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_a43ms"]
atlas = ExtResource("1_r0a2c")
region = Rect2(100, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_tod8a"]
atlas = ExtResource("1_r0a2c")
region = Rect2(150, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_hbaux"]
atlas = ExtResource("1_r0a2c")
region = Rect2(200, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_mmcug"]
atlas = ExtResource("1_r0a2c")
region = Rect2(250, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdg4y"]
atlas = ExtResource("1_r0a2c")
region = Rect2(300, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tk0f"]
atlas = ExtResource("6_fgcl5")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmamb"]
atlas = ExtResource("7_7cu2b")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_8110b"]
atlas = ExtResource("8_e2n4h")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8inm"]
atlas = ExtResource("9_cyen2")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_da3m2"]
atlas = ExtResource("10_typlu")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkfgd"]
atlas = ExtResource("11_piukt")
region = Rect2(0, 0, 50, 37)

[sub_resource type="SpriteFrames" id="SpriteFrames_gmr5w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0d3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7gne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uk3wn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1w0q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujpc7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nycyr")
}],
"loop": false,
"name": &"Die",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vse0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvrtu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2glma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mb4wy")
}],
"loop": true,
"name": &"Idel",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbios")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7sql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4gmr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jjn0p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcwwy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvmu0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0wrmx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_asfqd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cp1c2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qk6xo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7abj")
}],
"loop": false,
"name": &"atacar",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ondr5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ihnw3")
}, {
"duration": 10.0,
"texture": SubResource("AtlasTexture_te0rr")
}],
"loop": false,
"name": &"defensar",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nabsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_db4sp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvt22")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tl5xh")
}],
"loop": true,
"name": &"idel_espasa",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_acwj6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h5kvx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xuqv8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ot8hp")
}],
"loop": true,
"name": &"idel_espasa_atac",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajtsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gt5jp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cib10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_po6sp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmcvx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6wg3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1w5b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqkib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3u05s")
}],
"loop": false,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gx6bh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltayq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nyuyy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjx6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7vewp")
}],
"loop": false,
"name": &"slide",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_doy7o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a43ms")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tod8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbaux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmcug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdg4y")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tk0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmamb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8110b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8inm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_da3m2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkfgd")
}],
"loop": true,
"name": &"walt_espasa",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ppyid"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4qg0u"]
radius = 11.0454

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v1pik"]
size = Vector2(31, 46)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2cujl"]
size = Vector2(6, 41)

[node name="persoantge" type="CharacterBody2D" groups=["player"]]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_48cjj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.77027, 1.77027)
sprite_frames = SubResource("SpriteFrames_gmr5w")
animation = &"Die"
autoplay = "Idel"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 20)
shape = SubResource("CircleShape2D_ppyid")

[node name="AreaDamage" type="Area2D" parent="." groups=["player"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDamage"]
shape = SubResource("CircleShape2D_4qg0u")

[node name="AtackkArea" type="Area2D" parent="." groups=["Hit"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AtackkArea"]
position = Vector2(27.5, 3)
shape = SubResource("RectangleShape2D_v1pik")
disabled = true

[node name="AtackkArea2" type="Area2D" parent="." groups=["Hit"]]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AtackkArea2"]
position = Vector2(-32.5, 3)
shape = SubResource("RectangleShape2D_v1pik")
disabled = true

[node name="DefensArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DefensArea" groups=["save"]]
position = Vector2(15, 7.5)
shape = SubResource("RectangleShape2D_2cujl")
disabled = true

[node name="DefensArea2" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="DefensArea2" groups=["save"]]
position = Vector2(-14, 7.5)
shape = SubResource("RectangleShape2D_2cujl")
disabled = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
